quiz relative serializer re-structure
